--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                     <div class="mng-bx">
                                         <input id="dim_amount" type="text" name="" value="10" class="form-control">
                                         <img src="images/DiamondLogo.png" alt="">
-                                        <span>DIM</span>
+                                        <span>DMD</span>
                                     </div>
                                     <!-- <div class="mng-bx">
                                         <div class="dropdown">
@@ -101,7 +101,7 @@
                                     </div> -->
                                 </div>
 
-                                <h4>Receive <span><img src="images/DiamondLogo.png" alt=""> <strong id="receive_amount">10</strong>DIM</span></h4>
+                                <h4>Receive <span><img src="images/DiamondLogo.png" alt=""> <strong id="receive_amount">10</strong> DMD</span></h4>
                                 <a class="btn btn-tras invest-btn" id="invest" style="color: white; cursor: pointer;" onclick="approveMethamask()">Unlock Wallet</a>
                             </form>
 
